# openstack-janitor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: pyinstaller-entry.py
src/openstack_janitor/: __init__.py  age.py  cli.py
src/openstack_janitor/detectors/: __init__.py  floating_ips.py  instances.py  security_groups.py  snapshots.py  volumes.py
tests/: conftest.py  test_age.py  test_cli.py  test_floating_ips_detector.py  test_instances_detector.py  test_security_groups_detector.py  test_snapshots_detector.py  test_volumes_detector.py
